# debra-old

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  adresses.h  arm.c  arm.h  arm_cinematics.c  arm_cinematics.h  arm_cs.c  arm_cs.h  arm_init.c  arm_init.h  arm_interpolators.c  arm_interpolators.h  arm_trajectories.c  arm_trajectories.h  arm_utils.c  arm_utils.h  com_balises.c  com_balises.h  commandline.c  commandline.h  commands.c  commands.lua  commands_arm.c  commands_cs.c  commands_misc.c  commands_strat.c  cvra_cs.c  cvra_cs.h  cvra_param_robot.h  debra - Shortcut.lnk  error_numbers.h  generate_lua_c.sh  hardware.c  hardware.h  keyframe.h  (+15 more)
cinematics_test/: CMakeLists.txt  display_results.m  main.c
cinematics_test_table/: CMakeLists.txt  display_results.m  main.c
circle_tests/: display_results.m  main.c
integration_testing/: CMakeLists.txt  obstacle_avoidance_comm_test.c
tests/: arm_choose_elbow_pos.cpp  arm_cinematics.cpp  arm_cinematics_get_angle.cpp  arm_cs_test.cpp  arm_interpolator_test.cpp  arm_tests.cpp  arm_trajectories_test.cpp  arm_utils.cpp  control_system_manager_test.cpp  cvra_dc_test.cpp  hardware_misc.cpp  json_test.cpp  obstacle_avoidance_protocol_test.cpp  position_manager_test.cpp  simple_tests.cpp
tests/mock_tests/: semaphores_mock_test.cpp  uptime_mock_test.cpp
